fix brand name alignment

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 
 .nav-left {
   color: #777;
-  /*margin-left: 10% !important;*/
+  margin-left: 10% !important;
 }
 
 .nav-right {
